# ChangeLog for x11-themes/qtcurve-qt4
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve-qt4/ChangeLog,v 1.102 2010/05/27 07:47:37 wired Exp $

*qtcurve-qt4-1.4.2 (27 May 2010)

  27 May 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.4.2.ebuild:
  version bump

*qtcurve-qt4-1.4.1 (19 May 2010)

  19 May 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.4.1.ebuild:
  version bump

*qtcurve-qt4-1.4.0 (14 May 2010)

  14 May 2010; Alex Alexander <wired@gentoo.org>
  -qtcurve-qt4-1.0.1-r2.ebuild, -qtcurve-qt4-1.0.2.ebuild,
  -qtcurve-qt4-1.1.0.ebuild, -qtcurve-qt4-1.1.1.ebuild,
  -qtcurve-qt4-1.2.0.ebuild, -qtcurve-qt4-1.3.0.ebuild,
  +qtcurve-qt4-1.4.0.ebuild:
  1.4.0 version bump, removed old

*qtcurve-qt4-1.3.1 (17 Apr 2010)

  17 Apr 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.3.1.ebuild:
  version bump

*qtcurve-qt4-1.3.0 (12 Apr 2010)

  12 Apr 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.3.0.ebuild:
  version bump

*qtcurve-qt4-1.2.0 (19 Mar 2010)

  19 Mar 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.2.0.ebuild:
  version bump

*qtcurve-qt4-1.1.1 (26 Feb 2010)

  26 Feb 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.1.1.ebuild,
  +files/qtcurve-qt4-1.1.1-no-kde-fail.patch:
  version bump, patch to fix -kde compilation

*qtcurve-qt4-1.1.0 (23 Feb 2010)

  23 Feb 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.1.0.ebuild,
  +files/qtcurve-qt4-1.1.0-no-kde-fail.patch:
  version bump, patch to fix -kde compilation

*qtcurve-qt4-1.0.2 (01 Feb 2010)

  01 Feb 2010; Alex Alexander <wired@gentoo.org> +qtcurve-qt4-1.0.2.ebuild:
  version bump

  22 Jan 2010; Alex Alexander <wired@gentoo.org>
  qtcurve-qt4-1.0.1-r2.ebuild:
  added missing qt-svg dep

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> qtcurve-qt4-0.69.2.ebuild:
  Stable for HPPA (bug #290212).

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> qtcurve-qt4-0.69.2.ebuild: